--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "edwh-demo-plugin"
+name = "edwh-devdb-plugin"
 dynamic = ["version"]
-description = 'Demo project with a plugin to be discovered from the edwh package'
+description = 'edwh plugin for quick database snapshot creation and recovery'
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 license = "MIT"
 keywords = ["edwh"]
 authors = [
@@ -24,32 +24,32 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-    "edwh",
+    "edwh >= 0.56.0",
+    "edwh-files-plugin",
 ]
 
 [project.optional-dependencies]
 dev = [
     "hatch",
     "python-semantic-release<8",
-    "black",
 ]
 
 [project.urls]
-Documentation = "https://github.com/educationwarehouse/edwh-demo-tasks-plugin#readme"
-Issues = "https://github.com/educationwarehouse/edwh-demo-tasks-plugin/issues"
-Source = "https://github.com/educationwarehouse/edwh-demo-tasks-plugin"
+Documentation = "https://github.com/educationwarehouse/edwh-devdb-plugin#readme"
+Issues = "https://github.com/educationwarehouse/edwh-devdb-plugin/issues"
+Source = "https://github.com/educationwarehouse/edwh-devdb-plugin"
 
 # https://packaging.python.org/en/latest/guides/creating-and-discovering-plugins/#using-package-metadata
 [project.entry-points."edwh.tasks"]
-# namespace: (edwh demo.command)
-demo = "edwh_demo_plugin.demo_plugin"
+# namespace: (edwh devdb.command)
+devdb = "edwh_devdb_plugin.devdb_plugin"
 
 [tool.hatch.version]
-path = "src/edwh_demo_plugin/__about__.py"
+path = "src/edwh_devdb_plugin/__about__.py"
 
 [tool.semantic_release]
 branch = "master"
-version_variable = "src/edwh_demo_plugin/__about__.py:__version__"
+version_variable = "src/edwh_devdb_plugin/__about__.py:__version__"
 change_log = "CHANGELOG.md"
 upload_to_repository = false
 upload_to_release = false
@@ -87,7 +87,7 @@ dependencies = [
     "ruff>=0.0.243",
 ]
 [tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/edwh_demo_plugin tests}"
+typing = "mypy --install-types --non-interactive {args:src/edwh_devdb_plugin tests}"
 style = [
     "ruff {args:.}",
     "black --check --diff {args:.}",
@@ -142,7 +142,7 @@ unfixable = [
 ]
 
 [tool.ruff.lint.isort]
-known-first-party = ["edwh_demo_plugin"]
+known-first-party = ["edwh_devdb_plugin"]
 
 [tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = "all"
@@ -152,16 +152,16 @@ ban-relative-imports = "all"
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
 [tool.coverage.run]
-source_pkgs = ["edwh_demo_plugin", "tests"]
+source_pkgs = ["edwh_devdb_plugin", "tests"]
 branch = true
 parallel = true
 omit = [
-    "src/edwh_demo_plugin/__about__.py",
+    "src/edwh_devdb_plugin/__about__.py",
 ]
 
 [tool.coverage.paths]
-edwh_demo_plugin = ["src/edwh_demo_plugin", "*/edwh-demo-plugin/src/edwh_demo_plugin"]
-tests = ["tests", "*/edwh-demo-plugin/tests"]
+edwh_devdb_plugin = ["src/edwh_devdb_plugin", "*/edwh-devdb-plugin/src/edwh_devdb_plugin"]
+tests = ["tests", "*/edwh-devdb-plugin/tests"]
 
 [tool.coverage.report]
 exclude_lines = [
